--- a/configs/starship.toml
+++ b/configs/starship.toml
@@ -33,7 +33,7 @@ ahead =	"⇡${count} "
 behind = "⇣${count} "
 diverged = "⇕⇡${ahead_count}⇣${behind_count}"
 untracked = "?${count} "
-stashed = "$${count} "
+stashed = "↺${count} "
 modified = "!${count} "
 staged = "+${count} "
 renamed = "»${count} "
