Add alias to show all aliases for git

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -100,3 +100,5 @@
 	contains = branch -a --contains
 	# Diff tool
 	dft = difftool
+	# List all the aliases
+	alias = ! git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
