--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -91,6 +91,7 @@
 	s = status -sb
 	c = commit
 	a = add
+	aa = add -A
 	unstage = reset --
 	amend = commit --amend -C HEAD
 	po = push origin $(current_branch)
