--- a/config/starship.toml
+++ b/config/starship.toml
@@ -6,7 +6,7 @@ style = "blue"
 
 # makes prompt a single line
 [line_break]
-disabled = true
+disabled = false
 
 # Replace the "❯" symbol in the prompt with "➜"
 [character] # The name of the module we are configuring is "character"
