--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,20 +1,24 @@
-theme = "tokyonight_moon"
+theme = tokyonight_moon
 background-opacity = 0.95
 background-blur = 20
 
 window-padding-x = 4,2
 window-padding-y = 6,0
-macos-titlebar-style = "tabs"
+macos-titlebar-style = tabs
+macos-window-shadow = false
 
-font-family = "JetBrainsMono Nerd Font"
+font-family = JetBrainsMono Nerd Font
 font-size = 13
 
-shell-integration-features = "no-cursor"
-cursor-style = "block"
+shell-integration-features = no-cursor,title
+cursor-style = block
 mouse-hide-while-typing = true
-bold-is-bright = "true"
+bold-is-bright = true
 
 confirm-close-surface = false
-window-save-state = "always"
+window-save-state = always
 
 keybind = super+k=clear_screen
+keybind = super+comma=increase_font_size:1
+keybind = super+minus=decrease_font_size:1
+keybind = super+zero=reset_font_size
