Increase command timeout

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -5,6 +5,8 @@ add_newline = false
 
 right_format = """$time"""
 
+command_timeout = 1_000
+
 [time]
 disabled = false
 format = "[ $time]($style)"
