--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,6 @@
 theme = tokyonight_night
-background-opacity = 0.95
-background-blur = 20
+background = #09110b
+cursor-color = #35e3c1
 
 window-padding-x = 4,2
 window-padding-y = 6,0
