--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -6,6 +6,7 @@ window-padding-x = 4,2
 window-padding-y = 6,0
 macos-titlebar-style = tabs
 macos-window-shadow = false
+macos-option-as-alt = left
 
 font-family = JetBrainsMono Nerd Font
 font-size = 14
@@ -24,10 +25,10 @@ keybind = super+minus=decrease_font_size:1
 keybind = super+zero=reset_font_size
 keybind = super+r=reload_config
 
-keybind = alt+h=goto_split:left
-keybind = alt+j=goto_split:bottom
-keybind = alt+k=goto_split:top
-keybind = alt+l=goto_split:right
+keybind = alt+left=goto_split:left
+keybind = alt+down=goto_split:bottom
+keybind = alt+up=goto_split:top
+keybind = alt+right=goto_split:right
 
 keybind = alt+a>backslash=new_split:right
 keybind = alt+a>minus=new_split:down
