--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -109,3 +109,8 @@
 	dft = difftool
 	# List all the aliases
 	alias = ! git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
